Mon Jul  7 14:39:33 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (update_entries): Reindent a line.

	* sanity.sh (death2): Add comment about Sun diff.  Thanks to
	Warren Jones <wjones@TC.FLUKE.COM> for reporting this.

	* client.c (update_entries): If DONT_USE_PATCH, then just treat a
	Patched response as an indication to try again with complete files.
	* update.c (update): Remove DONT_USE_PATCH ifdefs, since a CVS
	with DONT_USE_PATCH defined can still handle Rcs-diff.
	* sanity.sh (serverpatch): Add comment about this coming up in
	real life if the user modifies the file while CVS is running.

	* client.c (start_server): Add comment about logfiles if there are
	several connections to the server.
	(log_buffer_shutdown): Close the logfile after shutting down the
	underlying buffer.  This way at least we get the last set of
	logfiles rather than a bizarre mishmash.

1997-07-06  enami tsugutomo  <enami@but-b.or.jp>

	* logmsg.c (do_verify): Unlink temporary file before call error().
	Remove unneeded `return' statement.  Fix comment.

Sun Jul  6 13:36:32 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* diff.c (diff_fileproc): Change message from "during rcsdiff of"
	to "while diffing".  For a while now, that message might be
	printed after a call to DIFF instead of rcsdiff.

	* diff.c (diff_fileproc): Call cvs_output not printf.  Remove
	calls to fflush (should be handled now by call to cvs_outflush in
	recurse.c).
	* patch.c (patch_fileproc): Likewise.

	* rcscmds.c, cvs.h (diff_exec): New function.
	* diff.c (diff_fileproc), patch.c (patch_fileproc),
	update.c (patch_file): Call it.

	* rcscmds.c: Adjust comments concerning diff library to point to
	new, expanded comments at diff_exec.  Remove comments concerning
	patch library; Rcs-diff should be adequate.

	* client.c (update_entries): Add comment about GNU patch usage (-b
	option and so on).

Sat Jul  5 04:13:28 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
